first waso baseline

--- a/ap_wasobaseline.ipynb
+++ b/ap_wasobaseline.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "69e71b85",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "id": "ad27b0e0",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "623fd720",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 149,
    "id": "5818dfa8",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 150,
    "id": "fa961f4c",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 151,
    "id": "6c7ca120",
    "metadata": {},
    "outputs": [],
@@ -88,44 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "90f48259",
+   "execution_count": 152,
+   "id": "6102ea65",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         Y\n",
-       "1         Y\n",
-       "2       NaN\n",
-       "3       NaN\n",
-       "4         Y\n",
-       "       ... \n",
-       "2565      Y\n",
-       "2566      Y\n",
-       "2567      Y\n",
-       "2568    NaN\n",
-       "2569      Y\n",
-       "Name: nasal_cong_none, Length: 2570, dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_df.nasal_cong_none"
+    "## sort out nasal_cong_none\n",
+    "data_df.nasal_cong_none.replace({np.nan:0,'Y':1}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 153,
    "id": "f79f4649",
    "metadata": {},
    "outputs": [],
    "source": [
-    "balance_cutoff = 0.9\n",
+    "balance_cutoff = 0.975\n",
     "imbalanced_classes = []\n",
     "for col in data_df.columns:\n",
     "    _ = data_df.columns.get_loc(col)\n",
@@ -135,46 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 154,
    "id": "3d0f251a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('race', array([0.95836576])),\n",
-       " ('nasal_cong_none', array([1.])),\n",
-       " ('coronary_ynd', array([0.9233463])),\n",
-       " ('angina_ynd', array([0.96730245])),\n",
-       " ('atheroscl_ynd', array([0.9758661])),\n",
-       " ('heartattack_ynd', array([0.95679253])),\n",
+       "[('atheroscl_ynd', array([0.9758661])),\n",
        " ('congestivehf_ynd', array([0.98871595])),\n",
-       " ('coronarybypass_ynd', array([0.95525292])),\n",
        " ('stroke_ynd', array([0.97743191])),\n",
        " ('emphysema_ynd', array([0.97898833])),\n",
-       " ('angioplasty_ynd', array([0.95758755])),\n",
        " ('pacemaker_ynd', array([0.99105058])),\n",
        " ('coronary_artery_stent_ynd', array([0.9766537])),\n",
-       " ('asthma_med', array([0.92140078])),\n",
-       " ('asthma_rescue_med', array([0.96031128])),\n",
-       " ('asthma_control_med', array([0.93696498])),\n",
        " ('dep_maoi_med', array([0.99922179])),\n",
        " ('dep_tca_med', array([0.9766537])),\n",
-       " ('htn_alpha_med', array([0.96264591])),\n",
-       " ('htn_arb_med', array([0.93190661])),\n",
        " ('narcotics_med', array([0.9766537])),\n",
-       " ('decongestants_med', array([0.95914397])),\n",
-       " ('anxiety_med', array([0.92801556])),\n",
-       " ('estrogen_med', array([0.93385214])),\n",
        " ('androgen_med', array([0.99688716])),\n",
-       " ('progesterone_med', array([0.96614786])),\n",
-       " ('sedative_med', array([0.90155642])),\n",
        " ('stimulants_med', array([0.9848249])),\n",
-       " ('psg_cpap', array([0.97005988])),\n",
        " ('psg_oxygen', array([1.]))]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "5ca03394",
    "metadata": {},
    "outputs": [],
@@ -197,17 +158,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "290e2d18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['atheroscl_ynd',\n",
+       " 'congestivehf_ynd',\n",
+       " 'stroke_ynd',\n",
+       " 'emphysema_ynd',\n",
+       " 'pacemaker_ynd',\n",
+       " 'coronary_artery_stent_ynd',\n",
+       " 'dep_maoi_med',\n",
+       " 'dep_tca_med',\n",
+       " 'narcotics_med',\n",
+       " 'androgen_med',\n",
+       " 'stimulants_med',\n",
+       " 'psg_oxygen']"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "imbalanced_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "413702b3",
    "metadata": {},
    "outputs": [],
@@ -215,12 +198,12 @@
     "data_df.drop(imbalanced_list, axis=1, inplace=True)\n",
     "data_df.drop_duplicates('wsc_id', inplace=True)\n",
     "data_df.set_index('wsc_id', inplace=True)\n",
-    "data_df.fillna(0, inplace=True)"
+    "#data_df.fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "ebc09e87",
    "metadata": {},
    "outputs": [],
@@ -233,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "f7feb2b6",
    "metadata": {},
    "outputs": [],
@@ -258,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "604d3ada",
    "metadata": {},
    "outputs": [],
@@ -278,11 +261,13 @@
     "colnames = list(ohe.get_feature_names())\n",
     "X1df = pd.DataFrame(X1t, columns = colnames)\n",
     "X1df.drop(columns = 'x0_nan', inplace=True)\n",
+    "X1df.index = data_df.index\n",
     "\n",
     "X2t = ohe.fit_transform(X2)\n",
     "colnames = list(ohe.get_feature_names())\n",
     "X2df = pd.DataFrame(X2t, columns = colnames)\n",
     "X2df.drop(columns = 'x0_nan', inplace=True)\n",
+    "X2df.index = data_df.index\n",
     "\n",
     "frames = [data_df, X1df, X2df]\n",
     "data_df = pd.concat(frames, axis = 1)\n",
@@ -291,6 +276,230 @@
     "\n",
     "data_df.drop(columns = ['thyroid_problem','hormone_therapy'], inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "id": "d3c38487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "937b1b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Keep main target (WAS0)\n",
+    "y = data_df.waso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "48a92241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Other confounding targets to remove including target\n",
+    "\n",
+    "targs = ['tst', 'tst_rem', 'tst_nrem', 'tso', 'totsleep', 'ess','p_eval_sleep', 'a_eval_slept', 'a_eval_hour',\n",
+    "       'a_eval_sleep', 'ps_eds','se', 'sleepiness']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "82e2b570",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Drop confounding targets\n",
+    "\n",
+    "X = data_df.drop(columns = targs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "b01823c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Scaling numerical features - categorical features and targets removed from this listt\n",
+    "\n",
+    "numeric_features = ['creatinine', 'glucose', 'hdl', 'ldl','total_cholesterol', 'triglycerides', 'uric_acid', 'weightkg', 'bmi',\n",
+    "       'headcm', 'waist_girth1', 'waist_girth2', 'hip_girth1', 'hip_girth2',\n",
+    "       'neck_girth1', 'neck_girth2', 'sit_sys1', 'sit_dia1', 'sit_sys2',\n",
+    "       'sit_dia2', 'hipgirthm', 'neckgirthm', 'waistgirthm', 'waisthip',\n",
+    "       'sitsysm', 'sitdiam', 'zung_score', 'zung_index', 'state',\n",
+    "       'trait', 'beer_week', 'wine_week', 'hard_week', 'bowls_day', 'packs_week', 'cigars_day',\n",
+    "       'smoke_years', 'pack_years','workday', 'weekend',\n",
+    "       'naps', 'snore_freq',\n",
+    "       'num_pregnancies', 'psg_cpap', 'ahi',\n",
+    "       'minsao2tst', 'ptstl90', 'age', 'heightcm', 'cans_cola', 'cups_coffee',\n",
+    "       'caffeine', 'alcohol_wk','eval_general', 'eval_life','eval_health', \n",
+    "       'snore_vol', 'choke_freq',\n",
+    "       'apnea_freq', 'awake_freq', 'ho_score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "2e88fbc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### Ordinal variables to be aware of - should not be scaled\n",
+    "ords = ['menopausal_status']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "547a2eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='mean')),\n",
+    "    ('scaler', StandardScaler())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "2907dcfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numeric_transformer, numeric_features)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "71d25649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = Pipeline(steps=[('preprocessor', preprocessor),('regression', LinearRegression())])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "28fb1ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2,\n",
+    "                                                    random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "id": "14e76cec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fit_time', 'score_time', 'test_neg_mean_absolute_error', 'test_r2']"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results = cross_validate(pipe, X_train, y_train, cv=10, scoring=('r2','neg_mean_absolute_error'))\n",
+    "sorted(cv_results.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "251fa443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-29.76890230103651"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results['test_neg_mean_absolute_error'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "04e2670f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04916012571149275"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results['test_r2'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "71235bad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.0, 291.5)"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.min(), y_train.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ca4e922",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
