--- a/notebooks/ap_waso_v3.ipynb
+++ b/notebooks/ap_waso_v3.ipynb
@@ -19,6 +19,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "f4b1ec78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d9c799dc",
    "metadata": {},
    "outputs": [],
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8f818c2e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f6df1a78",
    "metadata": {},
    "outputs": [],
@@ -60,13 +71,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "1c873f89",
    "metadata": {},
    "outputs": [],
    "source": [
     "import statsmodels.api as sm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "12adcd01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dreamteam.getdata import get_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4937b11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0a6a4da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_data() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yx/t49t5b3n7ss0xd5ghm8hplpm0000gn/T/ipykernel_2776/1559051035.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: get_data() missing 1 required positional argument: 'self'"
+     ]
+    }
+   ],
+   "source": [
+    "p = Pump().getPumps()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0480c61b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -301,7 +360,9 @@
   {
    "cell_type": "markdown",
    "id": "bfd9332a",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Process y"
    ]
@@ -310,7 +371,9 @@
    "cell_type": "code",
    "execution_count": 2276,
    "id": "375f315c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "targs = ['sleep_latency','tst', 'tst_rem', 'tst_nrem', 'tso', 'totsleep', 'ess','p_eval_sleep', 'a_eval_slept', 'a_eval_hour',\n",
@@ -321,7 +384,9 @@
    "cell_type": "code",
    "execution_count": 2277,
    "id": "def46482",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "imputenum = SimpleImputer(strategy = 'median')\n",
@@ -331,7 +396,9 @@
   {
    "cell_type": "markdown",
    "id": "98039569",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# process X"
    ]
@@ -340,7 +407,9 @@
    "cell_type": "code",
    "execution_count": 2278,
    "id": "f0a1f644",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -363,7 +432,9 @@
    "cell_type": "code",
    "execution_count": 2279,
    "id": "360e4e6c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#### Scaling numerical features - categorical features and targets removed from this listt\n",
@@ -382,7 +453,9 @@
    "cell_type": "code",
    "execution_count": 2280,
    "id": "018ccb9c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "categoric = data_df.drop(columns = targs)\n",
@@ -394,7 +467,9 @@
    "cell_type": "code",
    "execution_count": 2281,
    "id": "7c3cd1dc",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "categorical_features = categoric.columns"
@@ -404,7 +479,9 @@
    "cell_type": "code",
    "execution_count": 2282,
    "id": "d6e6664e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "categorical_transformer = Pipeline(steps=[\n",
@@ -415,7 +492,9 @@
    "cell_type": "code",
    "execution_count": 2283,
    "id": "0ea34259",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "numeric_transformer = Pipeline(steps=[\n",
@@ -427,7 +506,9 @@
    "cell_type": "code",
    "execution_count": 2284,
    "id": "85258b33",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "preprocessor = ColumnTransformer(\n",
@@ -440,7 +521,9 @@
    "cell_type": "code",
    "execution_count": 2285,
    "id": "9e1a41f7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "prepipe = Pipeline(steps=[('preprocessor', preprocessor)])"
@@ -450,7 +533,9 @@
    "cell_type": "code",
    "execution_count": 2286,
    "id": "2b4e6c13",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pipe = Pipeline(steps=[('preprocessor', preprocessor),('regression', LinearRegression())])"
@@ -460,7 +545,9 @@
    "cell_type": "code",
    "execution_count": 2287,
    "id": "c77f1fce",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X = prepipe.fit_transform(X)"
@@ -470,7 +557,9 @@
    "cell_type": "code",
    "execution_count": 2288,
    "id": "62b1fc48",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -491,7 +580,9 @@
    "cell_type": "code",
    "execution_count": 2289,
    "id": "cbc78e34",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X = pd.DataFrame(X, columns = cols)"
@@ -501,7 +592,9 @@
    "cell_type": "code",
    "execution_count": 2290,
    "id": "1cfcee00",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X.drop(columns = ['wsc_vst'], inplace=True)"
@@ -511,7 +604,9 @@
    "cell_type": "code",
    "execution_count": 2291,
    "id": "9a198238",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "balance_cutoff = 0.975\n",
@@ -526,7 +621,9 @@
    "cell_type": "code",
    "execution_count": 2292,
    "id": "3311bfd5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "imbalanced_list = []\n",
@@ -538,7 +635,9 @@
    "cell_type": "code",
    "execution_count": 2293,
    "id": "586bde6a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -567,7 +666,9 @@
    "cell_type": "code",
    "execution_count": 2294,
    "id": "6a6a4230",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X.drop(imbalanced_list, axis=1, inplace=True)"
@@ -577,7 +678,9 @@
    "cell_type": "code",
    "execution_count": 2295,
    "id": "b6ef963e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -598,7 +701,9 @@
    "cell_type": "code",
    "execution_count": 2348,
    "id": "b79c593e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "waso = data_df.waso\n",
@@ -611,7 +716,9 @@
    "cell_type": "code",
    "execution_count": 2357,
    "id": "fea545ca",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "waso = data_df.waso\n",
@@ -628,7 +735,9 @@
    "cell_type": "code",
    "execution_count": 2296,
    "id": "a81fd3de",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "se = data_df.se\n",
@@ -645,7 +754,9 @@
    "cell_type": "code",
    "execution_count": 2304,
    "id": "4fe7de57",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "tst = data_df.tst\n",
@@ -661,7 +772,9 @@
    "cell_type": "code",
    "execution_count": 1548,
    "id": "8109ba35",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "tso = data_df.tso\n",
@@ -678,7 +791,9 @@
    "cell_type": "code",
    "execution_count": 2358,
    "id": "c6d700ad",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -713,7 +828,9 @@
    "cell_type": "code",
    "execution_count": 2359,
    "id": "509d087d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15,\n",
@@ -724,7 +841,9 @@
    "cell_type": "code",
    "execution_count": 2360,
    "id": "c08563ea",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_train = y_train.astype('int')"
@@ -734,7 +853,9 @@
    "cell_type": "code",
    "execution_count": 2361,
    "id": "783b2731",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -757,7 +878,9 @@
    "cell_type": "code",
    "execution_count": 2362,
    "id": "6c84ffe9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#model1 = LogisticRegression(penalty = 'l1', solver = 'liblinear')\n",
@@ -768,7 +891,9 @@
    "cell_type": "code",
    "execution_count": 2363,
    "id": "db62cf05",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "model1 = RandomForestClassifier()"
@@ -778,7 +903,9 @@
    "cell_type": "code",
    "execution_count": 2364,
    "id": "f46ef9d6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -804,7 +931,9 @@
    "cell_type": "code",
    "execution_count": 2365,
    "id": "7909010f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
@@ -815,7 +944,9 @@
    "cell_type": "code",
    "execution_count": 2366,
    "id": "6c67887a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -837,7 +968,9 @@
    "cell_type": "code",
    "execution_count": 1414,
    "id": "6e92fdd9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -862,7 +995,9 @@
    "cell_type": "code",
    "execution_count": 1415,
    "id": "aee8c608",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -883,7 +1018,9 @@
    "cell_type": "code",
    "execution_count": 1662,
    "id": "e9f0becd",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -956,7 +1093,9 @@
   {
    "cell_type": "markdown",
    "id": "b55f9463",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Modelling"
    ]
@@ -965,7 +1104,9 @@
    "cell_type": "code",
    "execution_count": 681,
    "id": "397d1574",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -998,7 +1139,9 @@
    "cell_type": "code",
    "execution_count": 682,
    "id": "bbb736c7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "Xtrain, Xval, ytrain, yval = train_test_split(X_train, y_train, test_size=0.33)"
@@ -1008,7 +1151,9 @@
    "cell_type": "code",
    "execution_count": 683,
    "id": "0805f38d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import KBinsDiscretizer\n",
@@ -1022,7 +1167,9 @@
    "cell_type": "code",
    "execution_count": 698,
    "id": "640cff51",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1030,7 +1177,9 @@
    "cell_type": "code",
    "execution_count": 685,
    "id": "499ac8f4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1052,7 +1201,9 @@
    "cell_type": "code",
    "execution_count": 686,
    "id": "ce8ac0f8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1073,7 +1224,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30e1306d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1081,7 +1234,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44e1fcd4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1089,7 +1244,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "053326e5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1097,7 +1254,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "970e09d9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1105,7 +1264,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "05b8a04b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1113,7 +1274,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d065969",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1121,7 +1284,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a240086",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "model = LogisticRegression(multi_class='ovr', max_iter = 1000)"
@@ -1131,7 +1296,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f7856ca",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "model.fit(Xtrain_tr, ytrainbin_tr)\n",
@@ -1142,7 +1309,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1a891e02",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1150,7 +1319,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12ec5d01",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1158,7 +1329,9 @@
    "cell_type": "code",
    "execution_count": 117,
    "id": "f83bdeed",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1166,7 +1339,9 @@
    "cell_type": "code",
    "execution_count": 118,
    "id": "4d3a4146",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "dummy = DummyRegressor(strategy='mean')"
@@ -1176,7 +1351,9 @@
    "cell_type": "code",
    "execution_count": 119,
    "id": "2fc2c7a0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1200,7 +1377,9 @@
    "cell_type": "code",
    "execution_count": 120,
    "id": "548d91f9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1221,7 +1400,9 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "0eb0d2dc",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1242,7 +1423,9 @@
    "cell_type": "code",
    "execution_count": 89,
    "id": "e4423356",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1261,14 +1444,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5b4abf8c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "06c3faad",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Random non-used code"
    ]
@@ -1277,7 +1464,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d105bcf3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#WASO parameters\n",
@@ -1352,7 +1541,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
