python files II

--- a/notebooks/ap_waso_v3.ipynb
+++ b/notebooks/ap_waso_v3.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f4b1ec78",
+   "id": "337f2f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,26 +81,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "12adcd01",
+   "execution_count": 10,
+   "id": "d41a2ffc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'clean_data' from 'dreamteam.getdata' (/Users/anand/.pyenv/versions/3.8.6/envs/dreamteam/lib/python3.8/site-packages/dreamteam/getdata.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yx/t49t5b3n7ss0xd5ghm8hplpm0000gn/T/ipykernel_2776/3303442292.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdreamteam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdreamteam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'clean_data' from 'dreamteam.getdata' (/Users/anand/.pyenv/versions/3.8.6/envs/dreamteam/lib/python3.8/site-packages/dreamteam/getdata.py)"
+     ]
+    }
+   ],
    "source": [
-    "from dreamteam.getdata import get_data"
+    "from dreamteam.getdata import get_data\n",
+    "from dreamteam.getdata import clean_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4937b11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0a6a4da0",
+   "execution_count": 9,
+   "id": "53be99f2",
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +121,13 @@
     }
    ],
    "source": [
-    "p = Pump().getPumps()"
+    "get_data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0480c61b",
+   "id": "3f25074c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -360,9 +365,7 @@
   {
    "cell_type": "markdown",
    "id": "bfd9332a",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Process y"
    ]
@@ -371,9 +374,7 @@
    "cell_type": "code",
    "execution_count": 2276,
    "id": "375f315c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "targs = ['sleep_latency','tst', 'tst_rem', 'tst_nrem', 'tso', 'totsleep', 'ess','p_eval_sleep', 'a_eval_slept', 'a_eval_hour',\n",
@@ -384,9 +385,7 @@
    "cell_type": "code",
    "execution_count": 2277,
    "id": "def46482",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "imputenum = SimpleImputer(strategy = 'median')\n",
@@ -396,9 +395,7 @@
   {
    "cell_type": "markdown",
    "id": "98039569",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# process X"
    ]
@@ -407,9 +404,7 @@
    "cell_type": "code",
    "execution_count": 2278,
    "id": "f0a1f644",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -432,9 +427,7 @@
    "cell_type": "code",
    "execution_count": 2279,
    "id": "360e4e6c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#### Scaling numerical features - categorical features and targets removed from this listt\n",
@@ -453,9 +446,7 @@
    "cell_type": "code",
    "execution_count": 2280,
    "id": "018ccb9c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "categoric = data_df.drop(columns = targs)\n",
@@ -467,9 +458,7 @@
    "cell_type": "code",
    "execution_count": 2281,
    "id": "7c3cd1dc",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "categorical_features = categoric.columns"
@@ -479,9 +468,7 @@
    "cell_type": "code",
    "execution_count": 2282,
    "id": "d6e6664e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "categorical_transformer = Pipeline(steps=[\n",
@@ -492,9 +479,7 @@
    "cell_type": "code",
    "execution_count": 2283,
    "id": "0ea34259",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "numeric_transformer = Pipeline(steps=[\n",
@@ -506,9 +491,7 @@
    "cell_type": "code",
    "execution_count": 2284,
    "id": "85258b33",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "preprocessor = ColumnTransformer(\n",
@@ -521,9 +504,7 @@
    "cell_type": "code",
    "execution_count": 2285,
    "id": "9e1a41f7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prepipe = Pipeline(steps=[('preprocessor', preprocessor)])"
@@ -533,9 +514,7 @@
    "cell_type": "code",
    "execution_count": 2286,
    "id": "2b4e6c13",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pipe = Pipeline(steps=[('preprocessor', preprocessor),('regression', LinearRegression())])"
@@ -545,9 +524,7 @@
    "cell_type": "code",
    "execution_count": 2287,
    "id": "c77f1fce",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = prepipe.fit_transform(X)"
@@ -557,9 +534,7 @@
    "cell_type": "code",
    "execution_count": 2288,
    "id": "62b1fc48",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -580,9 +555,7 @@
    "cell_type": "code",
    "execution_count": 2289,
    "id": "cbc78e34",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.DataFrame(X, columns = cols)"
@@ -592,9 +565,7 @@
    "cell_type": "code",
    "execution_count": 2290,
    "id": "1cfcee00",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X.drop(columns = ['wsc_vst'], inplace=True)"
@@ -604,9 +575,7 @@
    "cell_type": "code",
    "execution_count": 2291,
    "id": "9a198238",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "balance_cutoff = 0.975\n",
@@ -621,9 +590,7 @@
    "cell_type": "code",
    "execution_count": 2292,
    "id": "3311bfd5",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "imbalanced_list = []\n",
@@ -635,9 +602,7 @@
    "cell_type": "code",
    "execution_count": 2293,
    "id": "586bde6a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -666,9 +631,7 @@
    "cell_type": "code",
    "execution_count": 2294,
    "id": "6a6a4230",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X.drop(imbalanced_list, axis=1, inplace=True)"
@@ -678,9 +641,7 @@
    "cell_type": "code",
    "execution_count": 2295,
    "id": "b6ef963e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -701,9 +662,7 @@
    "cell_type": "code",
    "execution_count": 2348,
    "id": "b79c593e",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "waso = data_df.waso\n",
@@ -716,9 +675,7 @@
    "cell_type": "code",
    "execution_count": 2357,
    "id": "fea545ca",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "waso = data_df.waso\n",
@@ -735,9 +692,7 @@
    "cell_type": "code",
    "execution_count": 2296,
    "id": "a81fd3de",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "se = data_df.se\n",
@@ -754,9 +709,7 @@
    "cell_type": "code",
    "execution_count": 2304,
    "id": "4fe7de57",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tst = data_df.tst\n",
@@ -772,9 +725,7 @@
    "cell_type": "code",
    "execution_count": 1548,
    "id": "8109ba35",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tso = data_df.tso\n",
@@ -791,9 +742,7 @@
    "cell_type": "code",
    "execution_count": 2358,
    "id": "c6d700ad",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -828,9 +777,7 @@
    "cell_type": "code",
    "execution_count": 2359,
    "id": "509d087d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15,\n",
@@ -841,9 +788,7 @@
    "cell_type": "code",
    "execution_count": 2360,
    "id": "c08563ea",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_train = y_train.astype('int')"
@@ -853,9 +798,7 @@
    "cell_type": "code",
    "execution_count": 2361,
    "id": "783b2731",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -878,9 +821,7 @@
    "cell_type": "code",
    "execution_count": 2362,
    "id": "6c84ffe9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#model1 = LogisticRegression(penalty = 'l1', solver = 'liblinear')\n",
@@ -891,9 +832,7 @@
    "cell_type": "code",
    "execution_count": 2363,
    "id": "db62cf05",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model1 = RandomForestClassifier()"
@@ -903,9 +842,7 @@
    "cell_type": "code",
    "execution_count": 2364,
    "id": "f46ef9d6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -931,9 +868,7 @@
    "cell_type": "code",
    "execution_count": 2365,
    "id": "7909010f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
@@ -944,9 +879,7 @@
    "cell_type": "code",
    "execution_count": 2366,
    "id": "6c67887a",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -968,9 +901,7 @@
    "cell_type": "code",
    "execution_count": 1414,
    "id": "6e92fdd9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -995,9 +926,7 @@
    "cell_type": "code",
    "execution_count": 1415,
    "id": "aee8c608",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1018,9 +947,7 @@
    "cell_type": "code",
    "execution_count": 1662,
    "id": "e9f0becd",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
