--- a/notebooks/ap_waso_v3.ipynb
+++ b/notebooks/ap_waso_v3.ipynb
@@ -19,12 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "337f2f52",
+   "id": "ca23d44e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload"
+    "%autoreload\n",
+    "%reload_ext autoreload"
    ]
   },
   {
@@ -81,53 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d41a2ffc",
+   "execution_count": 1,
+   "id": "1eab4839",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'clean_data' from 'dreamteam.getdata' (/Users/anand/.pyenv/versions/3.8.6/envs/dreamteam/lib/python3.8/site-packages/dreamteam/getdata.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yx/t49t5b3n7ss0xd5ghm8hplpm0000gn/T/ipykernel_2776/3303442292.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdreamteam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdreamteam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mclean_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'clean_data' from 'dreamteam.getdata' (/Users/anand/.pyenv/versions/3.8.6/envs/dreamteam/lib/python3.8/site-packages/dreamteam/getdata.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from dreamteam.getdata import get_data\n",
-    "from dreamteam.getdata import clean_data"
+    "from dreamteam.getdata import get_data1\n",
+    "from dreamteam.getdata import get_data1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "53be99f2",
+   "execution_count": 3,
+   "id": "bf5c2f22",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "get_data() missing 1 required positional argument: 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yx/t49t5b3n7ss0xd5ghm8hplpm0000gn/T/ipykernel_2776/1559051035.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: get_data() missing 1 required positional argument: 'self'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_data()"
+    "d,f = get_data1()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f25074c",
+   "id": "4456b5b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1468,7 +1445,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
