--- a/notebooks/ap_waso_v3.ipynb
+++ b/notebooks/ap_waso_v3.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 118,
    "id": "ae940c2f",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 119,
    "id": "9e0cf526",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 120,
    "id": "4628780e",
    "metadata": {},
    "outputs": [],
@@ -115,64 +115,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "27c86ce4",
+   "execution_count": 121,
+   "id": "c2dec91b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y1,y2,y3 = preproc_y(data_df, 50, 85, 95, 360, 410)\n",
-    "frames = [y1, y2, y3]\n",
-    "y = pd.concat(frames, axis = 1)"
+    "y = preproc_y(data_df, 50, 85, 95, 360, 410)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "ff9c7ea0",
+   "execution_count": 122,
+   "id": "e8425e62",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>waso</th>\n",
+       "      <th>se</th>\n",
+       "      <th>tst</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2365</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2366</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2367</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2368</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2369</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2370 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(0       1.0\n",
-       " 1       0.0\n",
-       " 2       0.0\n",
-       " 3       1.0\n",
-       " 4       1.0\n",
-       "        ... \n",
-       " 2365    0.0\n",
-       " 2366    0.0\n",
-       " 2367    0.0\n",
-       " 2368    1.0\n",
-       " 2369    1.0\n",
-       " Name: waso, Length: 2370, dtype: float64,\n",
-       " 0       1.0\n",
-       " 1       0.0\n",
-       " 2       0.0\n",
-       " 3       0.0\n",
-       " 4       1.0\n",
-       "        ... \n",
-       " 2365    0.0\n",
-       " 2366    0.0\n",
-       " 2367    0.0\n",
-       " 2368    1.0\n",
-       " 2369    0.0\n",
-       " Name: se, Length: 2370, dtype: float64,\n",
-       " 0       0.0\n",
-       " 1       1.0\n",
-       " 2       1.0\n",
-       " 3       0.0\n",
-       " 4       0.0\n",
-       "        ... \n",
-       " 2365    0.0\n",
-       " 2366    0.0\n",
-       " 2367    1.0\n",
-       " 2368    1.0\n",
-       " 2369    0.0\n",
-       " Name: tst, Length: 2370, dtype: float64)"
+       "      waso   se  tst\n",
+       "0      1.0  1.0  0.0\n",
+       "1      0.0  0.0  1.0\n",
+       "2      0.0  0.0  1.0\n",
+       "3      1.0  0.0  0.0\n",
+       "4      1.0  1.0  0.0\n",
+       "...    ...  ...  ...\n",
+       "2365   0.0  0.0  0.0\n",
+       "2366   0.0  0.0  0.0\n",
+       "2367   0.0  0.0  1.0\n",
+       "2368   1.0  1.0  1.0\n",
+       "2369   1.0  0.0  0.0\n",
+       "\n",
+       "[2370 rows x 3 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198b7e40",
+   "id": "3b48965e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1468,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6c566096",
+   "id": "c588091c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "50897a8e",
+   "id": "de05275b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7aaf27e2",
+   "id": "4bd53946",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6d698ff1",
+   "id": "aac9629a",
    "metadata": {},
    "outputs": [
     {
